Fixing overflow issues for big b in safari and firefox

--- a/assets/styles/sections/_intro.scss
+++ b/assets/styles/sections/_intro.scss
@@ -32,6 +32,7 @@
       left: 0;
       height: 50%;
       width: 100%;
+      overflow: hidden;
       position: absolute;
       background-blend-mode: normal, multiply, normal;
 
